packages/components-js/src/components/form/select-wrapper/select-wrapper.scss
@import '../../../../../../packages/scss-utils/index';

@mixin p-text-field-wrapper-label-text-visible() {
  position: static;
  width: fit-content;
  height: auto;
  margin: 0;
  padding: 0 0 $p-spacing-4 0;
  white-space: normal;
  overflow: visible;
  clip: auto;
  clip-path: none;
}

@mixin p-text-field-wrapper-label-text-hidden() {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  white-space: nowrap;
  overflow: hidden;
  clip: rect(1px, 1px, 1px, 1px);
  clip-path: inset(50%);
}

:host {
  display: block;
}

::slotted(select) {
  position: absolute !important;
  top: 0 !important;
  left: 0 !important;
  width: 100% !important;
  height: 100% !important;
  display: block !important;
  padding: p-rem(12px) p-rem(48px) p-rem(12px) p-rem(12px) !important;
  margin: 0 !important;
  outline: transparent none !important;
  outline-offset: 1px !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border-width: 0 !important;
  border-top-color: transparent !important;
  background-color: transparent !important;
  opacity: 1 !important;
  font-family: $p-font-primary !important;
  font-weight: $p-font-weight-regular !important;
  font-size: p-font-size($p-text-size-small) !important;
  line-height: p-line-height($p-text-size-small) !important;
  color: $p-color-theme-light-default !important;
  text-indent: 0 !important;
  cursor: pointer !important;
  transition: outline-color $p-animation-hover-duration $p-animation-hover-bezier,
  color $p-animation-hover-duration $p-animation-hover-bezier,
  border-top-color 1ms linear !important; // used for transitionend event listener;
}

// avoid dotted outline in Firefox
::slotted(select:-moz-focusring) {
  color: transparent !important;
  text-shadow: 0 0 0 $p-color-theme-light-default !important;
}

// avoid styling of select in IE
::slotted(select::-ms-expand) {
  display: none !important;
}

// avoid styling of select in IE
::slotted(select:focus::-ms-value) {
  background-color: transparent !important;
  color: $p-color-theme-light-default !important;
}

// Focus
::slotted(select:focus) {
  outline: $p-color-theme-light-state-focus solid 2px !important;
}

// Disabled
::slotted(select:disabled) {
  border-top-color: rgba(255, 255, 255, 0.01) !important;
  color: $p-color-theme-light-state-disabled !important;
  cursor: not-allowed !important;
}

.#{$p-global-class-prefix}select-wrapper {
  $bem-block: &;

  &__label {
    display: block;
    position: relative;
  }

  &__label-text,
  &__description-text {
    display: block;
    width: fit-content;
    color: $p-color-theme-light-default;
    transition: color $p-animation-hover-duration $p-animation-hover-bezier;

    &--disabled {
      color: $p-color-theme-light-state-disabled;
    }

    &--visible {
      @include p-text-field-wrapper-label-text-visible;
    }

    &--hidden {
      @include p-text-field-wrapper-label-text-hidden;
    }

    @include p-breakpoint("xs") {
      &--visible-xs {
        @include p-text-field-wrapper-label-text-visible;
      }

      &--hidden-xs {
        @include p-text-field-wrapper-label-text-hidden;
      }
    }

    @include p-breakpoint("s") {
      &--visible-s {
        @include p-text-field-wrapper-label-text-visible;
      }

      &--hidden-s {
        @include p-text-field-wrapper-label-text-hidden;
      }
    }

    @include p-breakpoint("m") {
      &--visible-m {
        @include p-text-field-wrapper-label-text-visible;
      }

      &--hidden-m {
        @include p-text-field-wrapper-label-text-hidden;
      }
    }

    @include p-breakpoint("l") {
      &--visible-l {
        @include p-text-field-wrapper-label-text-visible;
      }

      &--hidden-l {
        @include p-text-field-wrapper-label-text-hidden;
      }
    }

    @include p-breakpoint("xl") {
      &--visible-xl {
        @include p-text-field-wrapper-label-text-visible;
      }

      &--hidden-xl {
        @include p-text-field-wrapper-label-text-hidden;
      }
    }
  }

  &__description-text {
    color: $p-color-theme-light-neutral-contrast-medium;

    &--disabled {
      color: $p-color-theme-light-state-disabled;
    }

    #{$bem-block}__label-text ~ & {
      margin-top: -$p-spacing-4;
      padding-bottom: $p-spacing-8;
    }
  }

  &__fake-select {
    position: relative;
    width: 100%;
    height: p-rem(48px);
    display: block;
    background-color: $p-color-theme-light-background;
    box-shadow: inset 0 0 0 1px $p-color-theme-light-neutral-contrast-medium;
    transition: box-shadow $p-animation-hover-duration $p-animation-hover-bezier,
    background-color $p-animation-hover-duration $p-animation-hover-bezier;

    &:hover:not(&--disabled):not(&--success):not(&--error),
    #{$bem-block}__label-text:hover ~ &:not(&--disabled):not(&--success):not(&--error) {
      box-shadow: inset 0 0 0 1px $p-color-theme-light-default;
    }

    &--disabled {
      box-shadow: inset 0 0 0 1px $p-color-theme-light-state-disabled;
      background-color: $p-color-theme-light-background;
    }

    &--success {
      box-shadow: inset 0 0 0 2px $p-color-theme-light-notification-success;

      &:hover,
      #{$bem-block}__label-text:hover ~ & {
        box-shadow: inset 0 0 0 2px darken($p-color-theme-light-notification-success, 12%);
      }
    }

    &--error {
      box-shadow: inset 0 0 0 2px $p-color-theme-light-notification-error;

      &:hover,
      #{$bem-block}__label-text:hover ~ & {
        box-shadow: inset 0 0 0 2px darken($p-color-theme-light-notification-error, 12%);
      }
    }
  }

  &__fake-option-list {
    @include p-text();
    position: absolute;
    margin: 0;
    padding: 0;
    border: 1px solid $p-color-theme-light-neutral-contrast-medium;
    border-top-color: $p-color-theme-light-neutral-contrast-low;
    left: 0;
    right: 0;
    top: calc(100% - 1px);
    max-height: 200px;
    overflow-y: auto;
    background-color: $p-color-theme-light-background;
    list-style-type: none;
    scroll-behavior: smooth;

    // Firefox scrollbar styling
    scrollbar-width: thin;
    scrollbar-color: auto;

    // Webkit scrollbar styling defaults to visible
    &::-webkit-scrollbar {
      -webkit-appearance: none;
      width: 6px;
    }

    &::-webkit-scrollbar-thumb {
      border-radius: 4px;
      background-color: rgba(0, 0, 0, .4);
    }

    &:focus {
      outline: none;
    }

    &--hidden {
      display: block;
      opacity: 0;
      overflow: hidden;
      height: 1px;
    }
  }

  &__fake-option {
    position: relative;
    display: block;
    padding: $p-spacing-8 p-rem(12px);
    cursor: pointer;
    color: $p-color-theme-light-default;
    transition: color $p-animation-hover-duration $p-animation-hover-bezier,
    background-color $p-animation-hover-duration $p-animation-hover-bezier;

    &:not([aria-disabled]):hover {
      color: $p-color-theme-light-state-hover;
    }

    &:focus {
      outline: $p-color-theme-light-state-focus solid 2px;
    }

    &--selected {
      color: $p-color-theme-light-state-active;
      cursor: default;
      pointer-events: none;
      padding-right: $p-spacing-32;
    }

    &--highlighted:not(&--selected) {
      color: $p-color-theme-light-state-active;
      background-color: #ebebeb;
    }

    &--disabled {
      color: $p-color-theme-light-state-disabled;
      cursor: not-allowed;
    }
  }

  &__fake-option-icon {
     position: absolute;
     right: p-rem(12px);
  }

  &__fake-optgroup-label {
    display: block;
    padding: $p-spacing-8 p-rem(12px);
    margin-top: $p-spacing-8;
    font-weight: $p-font-weight-bold;

    & ~ #{$bem-block}__fake-option {
      padding-left: $p-spacing-24;
    }
  }

  &__icon {
    position: absolute;
    top: p-rem(12px);
    right: p-rem(12px);
    color: $p-color-theme-light-default;
    transition: transform $p-animation-hover-duration $p-animation-hover-bezier;

    &--disabled {
      color: $p-color-theme-light-state-disabled;
    }

    &--opened {
      transform: rotate(180deg);
    }
  }

  &__message {
    margin-top: $p-spacing-4;
    color: $p-color-theme-light-default;
    transition: color $p-animation-hover-duration $p-animation-hover-bezier;

    &--success {
      color: $p-color-theme-light-notification-success;
    }

    &--error {
      color: $p-color-theme-light-notification-error;
    }
  }
}

